<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_search"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="5"
        android:layout_marginTop="@dimen/_15sdp"
        android:paddingHorizontal="@dimen/_12sdp"
        android:layout_height="@dimen/_42sdp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:text="@string/nguuoixuly"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="center_vertical"
            android:textSize="@dimen/_12sdp"
            android:textColor="#000000"
            android:layout_height="match_parent" />

        <EditText
            android:id="@+id/edt_employeesName"
            android:layout_width="0dp"
            android:layout_weight="2.8"
            android:background="@drawable/bg_editext"
            android:fontFamily="@font/quicksand_medium"
            android:textColor="#000000"
            android:textSize="@dimen/_12sdp"
            android:hint="NV01"
            android:gravity="center_vertical"
            android:layout_height="match_parent" />
        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:src="@drawable/ic_search_black"
            android:padding="@dimen/_8sdp"
            android:layout_height="match_parent" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginVertical="@dimen/_12sdp"
        android:orientation="horizontal"
        android:weightSum="6"
        android:paddingHorizontal="@dimen/_12sdp"
        android:layout_height="@dimen/_32sdp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:text="@string/nguuoixuly"
            android:fontFamily="@font/quicksand_medium"
            android:textColor="#000000"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:layout_height="match_parent" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:text="@string/donvi"
            android:fontFamily="@font/quicksand_medium"
            android:textColor="#000000"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:text="@string/vaitro"
            android:fontFamily="@font/quicksand_medium"
            android:textColor="#000000"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:text="@string/status"
            android:fontFamily="@font/quicksand_medium"
            android:textColor="#000000"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>