<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/_100sdp"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="?actionBarSize"
            android:layout_height="?actionBarSize"
            android:background="@color/colorPrimary"
            android:padding="@dimen/_12sdp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/action_bar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_toRightOf="@+id/iv_back"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="center_vertical"
            android:text="@string/work_detail_report"
            android:textColor="#ffffff"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/tv_number_hour"
            android:layout_width="@dimen/_92sdp"
            android:layout_height="@dimen/_38sdp"
            android:layout_below="@id/action_bar"
            android:layout_marginLeft="@dimen/_12sdp"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="center_vertical"
            android:text="@string/number_hour"
            android:textColor="#000000"
            android:textSize="@dimen/_12sdp" />

        <EditText
            android:id="@+id/edt_hour_taken"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:layout_below="@id/action_bar"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_toRightOf="@id/tv_number_hour"
            android:background="@drawable/bg_editext"
            android:fontFamily="@font/quicksand_medium"
            android:hint="9"
            android:inputType="number"
            android:padding="@dimen/_12sdp"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/tv_number_hour_need"
            android:layout_width="@dimen/_92sdp"
            android:layout_height="@dimen/_38sdp"
            android:layout_below="@id/tv_number_hour"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="center_vertical"
            android:text="@string/number_hour_need"
            android:textColor="#000000"
            android:textSize="@dimen/_12sdp" />

        <EditText
            android:id="@+id/edt_hour_need"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:layout_below="@id/edt_hour_taken"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_toRightOf="@id/tv_number_hour_need"
            android:background="@drawable/bg_editext"
            android:fontFamily="@font/quicksand_medium"
            android:hint="8"
            android:inputType="number"
            android:padding="@dimen/_12sdp"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/tv_options_status"
            android:layout_width="@dimen/_92sdp"
            android:layout_height="@dimen/_38sdp"
            android:layout_below="@id/tv_number_hour_need"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="center_vertical"
            android:text="@string/choose_show"
            android:textColor="#000000"
            android:textSize="@dimen/_12sdp" />

        <Spinner
            android:id="@+id/spinner_status"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:layout_below="@id/edt_hour_need"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_toRightOf="@id/tv_options_status"
            android:background="@drawable/bg_spinner"
            android:entries="@array/options_status"
            android:theme="@style/spinner" />

        <TextView
            android:id="@+id/tv_percent"
            android:layout_width="@dimen/_92sdp"
            android:layout_height="@dimen/_38sdp"
            android:layout_below="@id/tv_options_status"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="center_vertical"
            android:text="@string/percent"
            android:textColor="#000000"
            android:textSize="@dimen/_12sdp" />

        <EditText
            android:id="@+id/edt_percent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:layout_below="@id/spinner_status"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_toRightOf="@id/tv_percent"
            android:background="@drawable/bg_editext"
            android:fontFamily="@font/quicksand_medium"
            android:hint="8"
            android:inputType="number"
            android:padding="@dimen/_12sdp"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_percent"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/quicksand_medium"
            android:paddingStart="@dimen/_12sdp"
            android:text="@string/result"
            android:textColor="#000000"
            android:textSize="@dimen/_12sdp" />

        <EditText
            android:id="@+id/edt_result"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_below="@id/tv_result"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_editext"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/tv_next_work"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_result"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/quicksand_medium"
            android:paddingStart="@dimen/_12sdp"
            android:text="@string/work_next"
            android:textColor="#000000"
            android:textSize="@dimen/_12sdp" />

        <EditText
            android:id="@+id/edt_next_work"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_below="@id/tv_next_work"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_editext"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/tv_dateLine"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_38sdp"
            android:layout_below="@id/edt_next_work"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="center_vertical"
            android:text="@string/dateLine"
            android:textColor="#000000"
            android:textSize="@dimen/_12sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:layout_below="@id/edt_next_work"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_toRightOf="@id/tv_dateLine"
            android:background="@drawable/bg_editext"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_6sdp"
            android:weightSum="7">

            <ImageView
                android:id="@+id/iv_rewind"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_fast_rewind" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="center"
                android:hint="MM/dd/yyyy"
                android:textColor="#000000" />

            <ImageView
                android:id="@+id/iv_forward"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_fast_forward" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:layout_below="@id/tv_dateLine"
            android:layout_marginTop="@dimen/_25sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_update"
                android:layout_width="0dp"
                android:layout_height="@dimen/_38sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_toLeftOf="@id/btn_delete"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:drawableLeft="@drawable/ic_save"
                android:fontFamily="@font/quicksand_bold"
                android:paddingHorizontal="@dimen/_15sdp"
                android:text="@string/btn_update"
                android:textColor="#ffffff"
                android:textSize="@dimen/_12sdp" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="0dp"
                android:layout_height="@dimen/_38sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_delete"
                android:drawableLeft="@drawable/ic_delete"
                android:fontFamily="@font/quicksand_bold"
                android:paddingHorizontal="@dimen/_30sdp"
                android:text="@string/btn_delete"
                android:textColor="#ffffff"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>